--- a/index.html
+++ b/index.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
+
 <body>
-    
+    <!-- header -->
+    <header class="p-3 mb-3 border-bottom" style="background-color: #51587B;">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-between">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none fs-4">
+                    <span style="color: #fff;">Auto</span><span style="color: #E2B338;">Donor</span>
+                </a>
+
+                <div class="d-flex align-items-center">
+                    <ul style="margin-right: 20px;" class="nav col-12 col-lg-auto me-lg-auto justify-content-center fs-6 gap-3">
+                        <li><a href="#" style="color: #fff;" class="nav-link px-2">Магазин</a></li>
+                        <li><a href="#" style="color: #fff;" class="nav-link px-2">Заказы</a></li>
+                        <li><a href="#" style="color: #fff;" class="nav-link px-2">Чат</a></li>
+                    </ul>
+                    <div class="cash ms-5 fs-6">
+                        <span style="color: #fff;">Баланс: 12.000 ₽</span>
+                    </div>
+                    <div class="dropdown text-end ms-1">
+                        <a href="#" class="d-block link-light text-decoration-none dropdown-toggle"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32"
+                                class="rounded-circle">
+                        </a>
+                        <ul class="dropdown-menu text-small">
+                            <li><a class="dropdown-item" href="#">Настройки</a></li>
+                            <li><a class="dropdown-item" href="#">Профиль</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Выйти</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="first">
+        <div class="container">
+            <div>
+                <p class="text-center fs-1 fw-bold">Авто-доноры</p>
+                <p class="text-center fs-5">Подберите нужную запчасть из представленных автомобилей</p>
+                <img src="/images/p1.jpg" alt="car">
+            </div>
+        </div>
+    </div>
+    <div class="second">
+        <div class="container">
+            
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
